istio-serviceMesh-Policy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: necloudnativetraining-istio-system
spec:
  peers:
    - mtls:
        mode: PERMISSIVE # PERMISSIVE - allow both mTLS & plaintext traffic, STRICT - only mTLS
