Customer-service-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - istiotls-gateway
  http:
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        host: customer-service
        port:
          number: 8080
