customer-service-virtual-service-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - necloudnativetraining-gateway
  http:
  - match:
    - uri:
        prefix: /customer
    route:
    - destination:
        host: customer-service
        subset: v1
        port:
          number: 8080
      weight: 75
    - destination:
        host: customer-service
        subset: v2
        port:
          number: 8080
      weight: 25
