istio-serviceMesh-destination-rule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: necloudnativetraining-istio-system
spec:
  host: "*.local" # all the services are matched in the same cluster
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL #Instructs Envoy to use mTLS for outgoing requests and to use the certificates that are deployed by Istio’s Citadel component
                        # DISABLE if do not want mTLS
